# xy-modbus

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DATASHEET.md  LICENSE-APACHE  LICENSE-MIT  README.md  todo.txt
docs-archive/: README.md  allaboutcircuits-forum-thread.md  csvke-README.md  csvke-XY-SKxxx_Config.h  csvke-data-group-vset.md  jens3382-README.md  jens3382-xy6020l.cpp  jens3382-xy6020l.h  manuals-plus-xy7025.md  tinkering4fun-README.md
examples/esp32c6-test/: Cargo.toml  flash.sh  sdkconfig.defaults
examples/esp32c6-test/.cargo/: config.toml
examples/esp32c6-test/src/: main.rs
src/: esp_idf.rs  lib.rs  regs.rs  transport.rs
src/device/: mod.rs  tests.rs
src/device/error/: mod.rs  tests.rs
src/framing/: mod.rs  tests.rs
src/types/: enums.rs  group.rs  mod.rs  model.rs  status.rs
src/uart/: mod.rs  tests.rs
