[package]
name = "xy-modbus"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
authors = ["xxorza <xxorza@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Modbus-RTU driver for XY-series programmable buck converters (XY6020L, XY6015, XY-SK60/120/120X). Only tested on real XY7025 hardware; other models share the register layout but are unverified."
homepage = "https://github.com/xorza/xy-modbus"
keywords = ["xy7025", "modbus", "buck", "embedded"]
categories = ["embedded", "no-std", "hardware-support"]
readme = "README.md"
repository = "https://github.com/xorza/xy-modbus"
documentation = "https://docs.rs/xy-modbus"
exclude = [
    "docs-archive/*",
    "CLAUDE.md",
    "examples/*",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["embedded-io"]
defmt = ["dep:defmt"]
serde = ["dep:serde"]
embedded-io = ["dep:embedded-io", "dep:embedded-hal"]
# Convenience constructor for esp-idf-hal `UartDriver`. Pulls in
# esp-idf-hal only on `target_os = "espidf"` builds — enabling the
# feature on host targets is a no-op so `cargo test --all-features`
# still works.
esp-idf-hal = ["embedded-io", "dep:esp-idf-hal"]

[dependencies]
defmt = { version = "1.0", optional = true }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
embedded-io = { version = "0.7", optional = true }
embedded-hal = { version = "1.0", optional = true }

[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-hal = { version = "0.46", optional = true }
