[package]
name = "xy-modbus"
version = "0.1.1"
edition = "2024"
authors = ["xxorza <xxorza@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "no_std Modbus-RTU driver for the XY7025 programmable buck converter, with raw protocol layers for related XY-series devices."
homepage = "https://github.com/xorza/xy-modbus"
keywords = ["xy7025", "modbus", "buck", "embedded"]
categories = ["embedded", "no-std", "hardware-support"]
readme = "README.md"
repository = "https://github.com/xorza/xy-modbus"
documentation = "https://docs.rs/xy-modbus"
exclude = [
    "docs-archive/*",
    "AGENTS.md",
    "CLAUDE.md",
    "examples/*",
]

[lints.rust]
missing_debug_implementations = "deny"
unreachable_pub = "deny"

[lints.clippy]
items_after_test_module = "deny"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["embedded-io"]
defmt = ["dep:defmt"]
embedded-io = ["dep:embedded-io", "dep:embedded-hal"]
# Convenience constructor for esp-idf-hal `UartDriver`. Pulls in
# esp-idf-hal only on `target_os = "espidf"` builds — enabling the
# feature on host targets is a no-op so `cargo test --all-features`
# still works.
esp-idf-hal = ["embedded-io", "dep:esp-idf-hal"]

[dependencies]
defmt = { version = "1.1", optional = true }
embedded-io = { version = "0.7", optional = true }
embedded-hal = { version = "1", optional = true }

[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-hal = { version = "0.46", optional = true }
