[package]
name = "xy-modbus-esp32c6-test"
version = "0.0.0"
edition = "2024"
publish = false

[[bin]]
name = "xy-modbus-esp32c6-test"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

# Standalone workspace so this example is not pulled in by the parent
# xy-modbus crate when running its own cargo commands.
[workspace]

[dependencies]
xy-modbus = { path = "../..", features = ["esp-idf-hal"] }
log = "*"
esp-idf-svc = "*"
esp-idf-hal = "*"

[build-dependencies]
embuild = "*"

# crates.io esp-idf-sys 0.37.2 fails to generate bindings against
# ESP-IDF v6.0 + clang 20 (stdio.h __FILE / mbedtls headers). The
# upstream master branches and xorza's hal fork fix it; mirror what
# ../../esp32-battery uses.
[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git", branch = "master" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git", branch = "master" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git", branch = "master" }
